welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ';' expected but ')' found.
if ( (a+10)<= c) || (a+10)<=(b)){
                               ^